# type-name-cpp

./: .gitignore  CMakeLists.txt
lib/type-name/: type-name.hpp  type-name.inl
lib/type-name/Storage/: Storage.hpp  Storage.inl
test/_test/: type-name.cpp
test/_test/Storage/: Storage.cpp
test/_test/_init/: init.cpp  init.hpp
